2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/37_convfloat_avec_init.deca
// Description :
//     Test sur convfloat avec initalisation 
// Resultats :
//    Valide 
//
// Historique :
// cree le 12/01/2024

{
    float f = 2 ;
}