2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/03_type_non_definie.deca
// Description :
//     Test avec un identificateur de type  non définie 
// Resultats :
//    Erreur Contexteulle :
//               ligne 10 : identiﬁcateur de type non déclaré
// Historique :
// cree le 01/01/2024

{
    intt a = 2 ;
    
}